--- a/about hacktoberfest/styles.css
+++ b/about hacktoberfest/styles.css
@@ -140,4 +140,38 @@ ul.topNav li a{
     
     text-shadow: 2px 5px 4px rgba(0, 0, 0, 0.25);
 }
+footer {
+	background-color: #010e28;
+	position: fixed;
+	padding: 1px;
+	width: 100%;
+	left: 0px;
+	bottom: 0px;
+	height: var(--footer-height);
+	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4);
+	box-sizing: initial;
+  }
+  .contact {
+	width: fit-content;
+	margin: auto;
+  }
+  .contact-text {
+	font-family: sans-serif;
+	font-weight: normal;
+	color: white;
+	font-size: 12px;
+	padding: 6px 0px 6px 0px;
+	margin: 10px;
+	text-align: center;
+  }
+  .contact-img {
+	display: inline;
+	padding-top: 3px;
+	padding-bottom: 6px;
+	height: 35px;
+	width: 35px;
+	margin: 6px;
+	animation: bttn 5s ease-in-out 1;
+  }
+
 
